<resources>
    <string name="app_name">Seattle Passport</string>

    <!--Font strings-->
    <string name="font_comfortaa_light" translatable="false">fonts/Comfortaa-Light.ttf</string>
    <string name="font_light" translatable="false">fonts/Roboto-Light.ttf</string>
    <string name="font_bold" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="font_medium" translatable="false">fonts/Roboto-Medium.ttf</string>

    <!--Marker strings for DrawMarkerActivity activity-->
    <string name="draw_marker_options_title">Hello World!</string>
    <string name="draw_marker_options_snippet">Welcome to my marker.</string>
    <string name="JSON_file_failure">Failed to load JSON file</string>

    <!--LoggedIn activity strings-->
    <string name="location_permission_dialog_title">Permission Needed</string>
    <string name="location_permission_dialog_msg">In order for the application to work, the location permission must be granted.</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="location_permission_settings">Permissions</string>
    <string name="location_enabled_dialog_title">Location Needed</string>
    <string name="location_enabled_dialog_msg">In order for the application to work, the device location must be enabled.</string>

    <!--Login Layout Strings-->
    <string name="sign_up_text">Don\'t have an account? Sign up here!</string>
    <string name="missing_email_validation_message">Please enter your email</string>
    <string name="missing_password_validation_message">Password cannot be blank</string>

    <!--Sign in Layout Strings-->
    <string name="or">or</string>
    <string name="log_in">log in</string>
    <string name="create_new_account">create new account</string>
    <string name="skip">skip</string>
    <string name="password_hint">PASSWORD</string>
    <string name="email_hint">EMAIL</string>
    <string name="connect_with_facebook">connect with Facebook</string>
    <string name="i_have_an_account_already">I have an Account already</string>

    <!-- Main Menu Strings-->
    <string name="app_motto">Find the things that make\nSeattle special</string>
    <string name="mainmenu_exploreMap_button_text">Explore Nearby</string>
    <string name="mainmenu_my_passport_button_text">My Passport</string>
    <string name="mainmenu_suggest_button_text">Suggest a Gem</string>

    <!--Option Menu Strings-->
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="log_out">Log out</string>
    <string name="admin">Admin Abilities</string>
    <string name="log_out_message">Are you sure you want to log out of Seattle Passport?</string>
    <string name="cancel">Cancel</string>

    <!-- NearbyPOIActivity strings -->
    <string name="welcome_back_message">Welcome back,&#160;</string>

    <!--Recyclerview strings-->
    <string name="unknown">N.A</string>
    <string name="location_error">Unable to get device location. Please try again later.</string>
    <string name="unable_to_get_results">Unable to get results. Please check your internet connection and try again later.</string>
    <string name="distance_miles">%1$s Miles</string>

    <!--Map Activity Strings-->
    <string name="title_activity_maps">Explorer Seattle</string>

    <!--Suggest Gem Strings-->
    <string name="suggestion_thanks">You submission was accepted, thanks</string>

    <!--POI Detail Activity Strings-->
    <string name="get_stamp_button">Get Stamp</string>
    <string name="stamp_error">Error getting Stamp</string>
    <string name="stamp_gotten">Stamp Received</string>


    <!--Passport Activity Strings-->
    <string name="title_activity_passport">Passport Collections</string>
    <string name="title_activity_management">Management Activities</string>
    <string name="title_activity_suggest">Suggestion a Gem</string>

    <!--Details Activity Strings-->
    <string name="poi_description_placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="collection_header">Collection:</string>
    <string name="distance_header">Distance:</string>
    <string name="title_activity_add_poito_database">AddPOIToDatabaseActivity</string>
    <string name="exit_full_screen_icon_description">exit full screen</string>

    <!--ADMIN create POI Strings-->
    <string name="create_poi_instructions">Create a new generic POI in the database</string>
    <string name="create_poi_unique_index">UNIQUE INDEX:</string>
    <string name="create_poi_poi_index_name">POI Index Name</string>
    <string name="create_poi_button_text">Create POI</string>
    <string name="create_poi_name_header">NAME:</string>
    <string name="create_poi_name_hint">Name</string>

</resources>
